# wog-server

./: Cargo.toml
client/: package-lock.json
client/src/: App.css  App.tsx  index.css
client/src/api/: auth.ts
client/src/components/: GoogleButton.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: LoginPage.tsx  ProfilePage.tsx
crates/payment-client/: Cargo.toml
crates/payment-client/src/: client.rs
crates/wog-api/: Cargo.toml
crates/wog-api/src/: errors.rs  lib.rs
crates/wog-api/src/endpoints/: user.rs
crates/wog-api/src/routers/: mod.rs  oauth.rs  user.rs
crates/wog-config/: Cargo.toml
crates/wog-config/src/: config.rs
crates/wog-config/src/user/: dto.rs
crates/wog-infras/: Cargo.toml
crates/wog-infras/migrations/: init-1.sql
crates/wog-infras/src/: errors.rs  lib.rs  models.rs
crates/wog-infras/src/repos/: mod.rs  oauth.rs  users.rs
crates/wog-infras/src/services/: mod.rs  oauth.rs  users.rs
crates/wog-middleware/: Cargo.toml
crates/wog-middleware/src/: lib.rs
crates/wog-oauth/: Cargo.toml
crates/wog-oauth/src/: lib.rs
migrations/: 0001_init.sql
