[package]
name = "payment-client"
version = "0.1.0"
edition = "2024"

[dependencies]
envconfig = "0.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
