[package]
name = "wog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
wog-middleware = { path = "../wog-middleware" }
wog-infras = { path = "../wog-infras" }
wog-config = { path = "../wog-config" }

axum = { version = "0.8.8", features = ["ws", "default", "macros"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
envconfig = "0.11.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "axum_extras"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa-axum = "0.2.0"
bytes = "1.11.1"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

