[package]
name = "wog-infras"
version = "0.1.0"
edition = "2024"

[dependencies]
wog-oauth = { path = "../wog-oauth"}

anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
envconfig = "0.11.1"
tracing = "0.1.44"
tokio = "1.50.0"
jsonwebtoken = "10.3.0"
