[package]
name = "wog-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
wog-infras = { path = "../wog-infras" }
wog-oauth = { path = "../wog-oauth" }

axum = "0.8.8"
axum-extra = { version = "0.10.1", features = ["cookie"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"