[package]
name = "wog-oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
envconfig = "0.11.1"
oauth2 = "5.0.0"
oauth2-reqwest = "0.1.0-alpha.3"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
